Fix: removed iframe width parameters as they caused overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,9 +559,7 @@ i:hover {
     iframe {}
 
     /* Contact me */
-    .ginc-box form {
-        max-width: 150px;
-    }
+    
 
     .contact-box {
         padding: 0;
